# KSI_versions

./: .gitignore  alembic.ini  app.py  dependencies.py  load_csv.py  models.py  oks.db  oks_routes.py  pyproject.toml  test.ipynb
2025_03_data/: 03_OKS.csv
alembic/: env.py
alembic/versions/: 28c1e694661e_initial_schema.py
routers/: version_router.py
